fix(dropdown): fixed an issue where the menu and tooltip overlapped
Dropdown displays the header in Sidenav.

--- a/src/Dropdown/styles/common.less
+++ b/src/Dropdown/styles/common.less
@@ -342,9 +342,9 @@
 // Dropdown section headers
 .@{ns}dropdown-header {
   display: block;
-  padding: 3px 20px;
-  font-size: @font-size-small;
+  padding: @dropdown-item-content-padding-vertical @dropdown-item-content-padding-horizontal;
   line-height: @line-height-base;
   color: @dropdown-header-color;
+  border-bottom: 1px solid @dropdown-divider-bg;
   white-space: nowrap; // as with > li > a
 }
